Mobile: fix current weather word wraps

--- a/mobile/css/doska.css
+++ b/mobile/css/doska.css
@@ -1667,8 +1667,10 @@ blockquote {
   background-color: #6a8b22;
 }
 .m-weather-now {
+  overflow: hidden;
   height: 50px;
   margin: 20px 0 10px;
+  white-space: nowrap;
 }
 .m-weather-now__temp {
   font-size: 50px;
@@ -1692,6 +1694,7 @@ blockquote {
   height: 50px;
   padding-top: 10px;
   vertical-align: top;
+  white-space: normal;
 }
 .m-doska-search {
   position: relative;
